# flowly_ai_bot

./: .gitignore  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/routes/: debug_booking.py  debug_reply.py  health.py  meta_webhook.py  meta_webhook.py.save
app/application/dto/: normalized_message.py
app/application/services/: ai_service.py  booking_service.py  calendar_service.py  dedup_service.py  intent_service.py  knowledge_service.py  language_service.py  memory_service.py  message_processor.py  outbound_service.py  redis_booking_state_service.py  redis_dedup_service.py  redis_memory_service.py  reply_service.py  speech_service.py
app/core/: config.py
app/data/: knowledge_base.json
app/domain/: enums.py
app/infrastructure/google/: calendar_client.py
app/infrastructure/meta/: client.py  filters.py  parser.py
app/infrastructure/openai/: client.py
app/infrastructure/persistence/: redis_client.py
tests/: test_post_booking_flows.py
